Fix the migrations, Add The Order Logic, Create Order Resource, Create the relation between tables in the modesl, Add Order Service, ....
