# app/Http/Requests/StoreOrderRequest.php
@@ -1,0 +1,35 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreOrderRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'customer_name'=>'required',
+            'customer_surname'=>'required',
+            'products'=>'required|array',
+            'products.*.id'=>'required|exists:products,id',
+            'products.*.quantity'=>['required', 'integer', 'regex:/^[1-9]+/'],
+            'customer_address'=>'string|required'
+        ];
+    }
+}
